[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bah-audio-text-fusion"
version = "0.1.0"
description = "BERT and wav2vec cross-attention fusion for BAH A/H classification"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0.0",
  "transformers>=4.40.0",
  "accelerate>=0.30.0",
  "numpy>=1.23.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "scipy>=1.10.0",
  "soundfile>=0.12.1",
  "tqdm>=4.66.0",
  "PyYAML>=6.0.0",
]

[project.scripts]
bah-fusion-train = "fusion.train:main"
bah-fusion-evaluate = "fusion.evaluate:main"

[tool.setuptools.packages.find]
include = ["fusion*"]
